--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "watch": "webpack --watch",
     "start": "webpack serve --open",
-    "build": "webpack --progress --mode=production"
+    "build": "webpack --progress"
   },
   "repository": {
     "type": "git",
@@ -30,6 +30,7 @@
     "webpack-dev-server": "^4.7.2"
   },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "date-fns": "^2.28.0"
   }
 }
