--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,23 @@
+.DS_Store
 node_modules
-.eslintrc.json
-.eslintignore
-webpack.config.js
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
 .vscode
-todo.txt
-main.js.map
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
