--- a/package.json
+++ b/package.json
@@ -1,36 +1,44 @@
 {
   "name": "weather-app",
-  "version": "1.0.0",
-  "description": "A simple weather app that pulls data from OpenWeatherApp API and uses Vue with Quasar.",
+  "version": "0.1.0",
   "private": true,
-  "main": "index.js",
   "scripts": {
-    "watch": "webpack --watch",
-    "start": "webpack serve --open",
-    "build": "webpack --progress"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Akirazian/weather-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Akirazian/weather-app/issues"
-  },
-  "homepage": "https://github.com/Akirazian/weather-app#readme",
-  "devDependencies": {
-    "css-loader": "^6.5.1",
-    "eslint": "^8.6.0",
-    "eslint-plugin-vue": "^8.2.0",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.24.0",
-    "date-fns": "^2.28.0"
-  }
+    "core-js": "^3.6.5",
+    "date-fns": "^2.28.0",
+    "vue": "^3.0.0"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
